<resources>

    <string name="app_name">Temnokhud - Lab 1</string>


    <string name="text_add_note">Add note</string>
    <string name="text_update_note">Update note</string>
    <string name="text_filter">Filter</string>
    <string name="text_search">Search</string>

    <string name="text_title">Title</string>
    <string name="text_description">Description</string>
    <string name="text_importance">Importance</string>

    <string name="text_create">Create</string>
    <string name="text_update">Update</string>

    <string name="text_minor">Minor</string>
    <string name="text_major">Major</string>
    <string name="text_critical">Critical</string>
    <string name="text_delete">Delete</string>

</resources>
