<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_notes"
        android:icon="@drawable/ic_search_button"
        android:title="@string/text_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_note"
        android:icon="@drawable/ic_add_button"
        android:title="@string/text_add_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter_minor"
        android:checkable="true"
        android:icon="@drawable/ic_filter_button"
        android:title="@string/text_minor"
        android:checked="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_major"
        android:checkable="true"
        android:icon="@drawable/ic_filter_button"
        android:checked="true"
        android:title="@string/text_major"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_critical"
        android:checkable="true"
        android:icon="@drawable/ic_filter_button"
        android:checked="true"
        android:title="@string/text_critical"
        app:showAsAction="never" />

</menu>
